# NuFI_deal.ii_1x1v

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  blas.hpp  cmake_install.cmake  compile_commands.json  density.vtk  electric_field.vtk  fields.hpp  lsmr.hpp  nufi_poisson.cc  nufi_solver.hpp  parameters.hpp  plotting.ipynb  poisson_non_periodic.hpp  poisson_problem.hpp  save_results.hpp  spline_field.hpp  splines.hpp
nufi/: blas.h  fields.h  lsmr.h  nufi_solver.h  parameters.h  poisson_non_periodic.h  poisson_problem.h  save_results.h  splines.h  stopwatch.h
results/: density_0.vtk  density_1.vtk  density_10.vtk  density_100.vtk  density_101.vtk  density_102.vtk  density_103.vtk  density_104.vtk  density_11.vtk  density_12.vtk  density_13.vtk  density_14.vtk  density_15.vtk  density_16.vtk  density_17.vtk  density_18.vtk  density_19.vtk  density_2.vtk  density_20.vtk  density_21.vtk  density_22.vtk  density_23.vtk  density_24.vtk  density_25.vtk  density_26.vtk  density_27.vtk  density_28.vtk  density_29.vtk  density_3.vtk  density_30.vtk  density_31.vtk  density_32.vtk  density_33.vtk  density_34.vtk  density_35.vtk  density_36.vtk  density_37.vtk  density_38.vtk  density_39.vtk  density_4.vtk  (+170 more)
src/: blas.cc  main.cc  nufi_solver.cc  save_results.cc
